# keelhaul

./: .gitignore  .gitmodules  Cargo.toml  Justfile  LICENSE  README.md  build.rs  requirements.txt
.github/workflows/: headsail-selftest.yml  keelhaul.yml  validate.yml
common/src/: lib.rs
data/: test.svd
data/ipxact/: test1.xml  test2.xml
data/svd/: test16.svd  test32.svd  test64.svd  test8.svd
doc/figures/rendered/: 20240326T1118-keelhaul-dep-graph.txt
examples/headsail/: Cargo.toml
examples/headsail-selftest/: Cargo.toml  Justfile  build.rs  connect-and-load.gdb  headsail-sysctrl-v0.1.1.svd  memory.x  renode.sh  rust-toolchain.toml
examples/headsail-selftest/.cargo/: config.toml
examples/headsail-selftest/src/: main.rs
examples/headsail/headsail-selftest/: Cargo.toml  README.md  renode.sh
examples/headsail/hello-hpc/: renode.sh
examples/headsail/hello-sysctrl/: Cargo.toml  renode.sh
generate/: Cargo.toml
generate/src/: lib.rs  main.rs
keelhaul/: Cargo.toml
keelhaul-cli/: Cargo.toml
keelhaul-cli/src/: main.rs
keelhaul/src/: analysis.rs  api.rs  codegen.rs  error.rs  filtering.rs  generate.rs  lib.rs  model.rs  parse_svd.rs  util.rs
keelhaul/src/api/: error.rs
keelhaul/src/codegen/: test_memory.rs  test_register.rs
keelhaul/src/frontend/: mod.rs  svd_legacy.rs  svd_parser.rs
keelhaul/src/model/: addr.rs  register.rs
parse/: Cargo.toml
parse/src/: lib.rs  main.rs
register-selftest/: Cargo.toml  README.md  build.rs
register-selftest-facade/: Cargo.toml
register-selftest-facade/src/: lib.rs
register-selftest-generator/: Cargo.toml  build.rs
register-selftest-generator-common/: Cargo.toml
register-selftest-generator-common/src/: lib.rs  model.rs
register-selftest-generator-parse/: Cargo.toml
register-selftest-generator-parse/src/: lib.rs  main.rs
register-selftest-generator-runner/: Cargo.toml  old_build.rs
register-selftest-generator-runner/src/: main.rs  old_register_tests.rs  register_tests.rs
register-selftest-generator/src/: lib.rs
register-selftest/examples/: run_every_test.rs
register-selftest/src/: lib.rs
register-test-generator/: Cargo.toml
register-test-generator-cli/: Cargo.toml
register-test-generator-cli/src/: main.rs
register-test-generator/src/: error.rs  generate.rs  lib.rs  model.rs  parse_ipxact.rs  parse_json.rs  parse_svd.rs  to_json.rs  xml.rs
runner/: Cargo.toml  build.rs
runner/src/: register_tests.rs
runtimes/headsail-selftest/: Cargo.toml
runtimes/headsail-selftest/.cargo/: config.toml
runtimes/headsail-selftest/src/: main.rs
scripts/: find_testcases.py  generate.py  parse.py  register.py
src/: main.rs  register_tests.rs
vp/headsail/: 0_mach_create.resc  1_hpc.resc  1_sysctrl.resc  common.repl  headsail.repl  mach_create.resc  run_hpc.resc  run_sysctrl.resc
