[package]
name = "keelhaul-cli"
version = "0.1.0"
authors = [
    "Roni Hämäläinen <roni.hamalainen@tuni.fi>",
    "Henri Lunnikivi <henri.lunnikivi@tuni.fi>",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "keelhaul"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive", "cargo"] }
clap-num = "1.1.1"
clap-verbosity-flag = "2.2.0"
env_logger = "0.11.3"
keelhaul = { version = "0.1.0", path = "../keelhaul", features = ["rustfmt"] }
