[package]
name = "keelhaul"
version = "0.1.0"
authors = [
    "Roni Hämäläinen <roni.hamalainen@tuni.fi>",
    "Henri Lunnikivi <henri.lunnikivi@tuni.fi>",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
roxmltree = { version = "0.18", features = ["positions"] }
itertools = "0.10"
regex = "1.7.1"
lazy_static = "1.4.0"
quote = "1.0.26"
proc-macro2 = "1.0.52"
num = "0.4.0"
strum = { version = "0.24.1", features = ["derive"] }
fs-err = "2.9.0"
