[package]
name = "keelhaul"
version = "0.1.0"
authors = [
    "Roni Hämäläinen <roni.hamalainen@tuni.fi>",
    "Henri Lunnikivi <henri.lunnikivi@tuni.fi>",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
roxmltree = { version = "0.19", features = ["positions"] }
itertools = "0.12"
regex = "1.10"
lazy_static = "1.4.0"
quote = "1.0.35"
proc-macro2 = "1.0.79"
num = "0.4"
strum = { version = "0.26", features = ["derive"] }
fs-err = "2.9.0"
