[package]
name = "parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
roxmltree = "*"
itertools = "*"
json = "*"

[lib]
name = "parse"
path = "src/lib.rs"

[[bin]]
name = "parse"
path = "src/main.rs"
