[package]
name = "register-selftest-facade"
version = "0.1.0"
edition = "2021"
build = "build/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
register-selftest-generator-common = { path = "../register-selftest-generator-common" }
register-selftest-generator-parse = { path = "../register-selftest-generator-parse" }
json = { workspace = true }
fs-err = "2.9.0"
thiserror = "1.0.38"
log = "0.4.17"

[lib]
name = "register_selftest"
path = "src/lib.rs"
