[package]
name = "register-selftest-generator-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
register-selftest-generator-common = { path = "../register-selftest-generator-common" }
roxmltree = "*"
itertools = "*"
json = "*"

[lib]
name = "register_selftest_generator_parse"
path = "src/lib.rs"
