[package]
name = "register-selftest-generator-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
register-selftest-generator-parse = { path="../register-selftest-generator-parse" }
register-selftest-generator = { path="../register-selftest-generator" }
