[package]
name = "register-selftest-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
register-selftest-generator-common = { path = "../register-selftest-generator-common" }
register-selftest-generator-parse = { path = "../register-selftest-generator-parse" }
json = "*"

[lib]
name = "register_selftest_generator"
path = "src/lib.rs"

[[bin]]
name = "register_selftest_generator"
path = "src/main.rs"
