[package]
name = "register-selftest"
version = "0.1.0"
edition = "2021"
build = "build/lib.rs"
authors = [
    "Roni Hämäläinen <roni.hamalainen@tuni.fi>",
    "Henri Lunnikivi <henri.lunnikivi@tuni.fi>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
register-test-generator = { path = "../register-test-generator" }
json = { workspace = true }
thiserror = { workspace = true }
fs-err = "2.9.0"
log = { workspace = true }
anyhow = "1.0.70"

[lib]
name = "register_selftest"
path = "src/lib.rs"
