[package]
name = "register-test-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = { workspace = true }
thiserror = "1.0.38"
log = "0.4.17"
roxmltree = "0.18"
itertools = "0.10"
regex = "1.7.1"
lazy_static = "1.4.0"
