[package]
name = "register-test-generator"
version = "0.1.0"
authors = ["Roni Hämäläinen", "Henri Lunnikivi <henri.lunnikivi@tuni.fi>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
roxmltree = "0.18"
itertools = "0.10"
regex = "1.7.1"
lazy_static = "1.4.0"
quote = "1.0.26"
proc-macro2 = "1.0.52"
